--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -16,3 +16,17 @@ jobs:
         with:
           name: dist
           path: dist/
+  release:
+    if: startsWith(github.ref, 'refs/tags/')
+    needs: generate
+    permissions:
+      contents: write
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/download-artifact@v4
+        with:
+          name: dist
+      - uses: softprops/action-gh-release@v2
+        with:
+          files: dist/
+          prerelease: true
