--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -26,6 +26,7 @@ jobs:
       - uses: actions/download-artifact@v4
         with:
           name: dist
+          path: dist/
       - uses: softprops/action-gh-release@v2
         with:
           files: dist/*
