--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -8,10 +8,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: astral-sh/setup-uv@v3
+      - uses: docker/setup-buildx-action@v3
+      - id: build
+        uses: docker/build-push-action@v6
+        with:
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+          load: true
       - run: |
-          sh generate.sh
-          rm dist/.gitignore
+          CID=$(docker create ${{ steps.build.outputs.imageid }} true)
+          docker cp ${CID}:dist/ ./
       - uses: actions/upload-artifact@v4
         with:
           name: dist
