--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -14,10 +14,7 @@ jobs:
         with:
           cache-from: type=gha
           cache-to: type=gha,mode=max
-          load: true
-      - run: |
-          CID=$(docker create ${{ steps.build.outputs.imageid }} true)
-          docker cp ${CID}:dist/ ./
+          outputs: type=local,dest=dist/
       - uses: actions/upload-artifact@v4
         with:
           name: dist
