--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,8 +1,6 @@
 name: build
-
 on:
   push:
-
 jobs:
   generate:
     runs-on: ubuntu-latest
@@ -14,12 +12,12 @@ jobs:
         with:
           cache-from: type=gha
           cache-to: type=gha,mode=max
-          outputs: type=local,dest=dist/
+          outputs: type=local,dest=dist
           provenance: false
       - uses: actions/upload-artifact@v4
         with:
           name: dist
-          path: dist/
+          path: dist
   release:
     if: startsWith(github.ref, 'refs/tags/')
     needs: generate
@@ -30,7 +28,7 @@ jobs:
       - uses: actions/download-artifact@v4
         with:
           name: dist
-          path: dist/
+          path: dist
       - uses: softprops/action-gh-release@v2
         with:
           files: dist/*
